FF-1560: Fixed z-index issue with flow element list

--- a/Client/Components/Editor/Editor.razor.scss
+++ b/Client/Components/Editor/Editor.razor.scss
@@ -19,10 +19,10 @@
 } 
 
 .flow-element-editor-overlay.background-overlay { 
-  z-index:3;
+  z-index:5;
 }
 .flow-element-editor {
-  z-index:4;
+  z-index:6;
   &.maximised {
     left: 0;
     right: 0;
